--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "0001_operator_spread.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "rxjs": "^6.6.3"
+  },
+  "devDependencies": {
+    "jest": "^26.6.1"
   }
 }
