--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "jest": "^26.6.1"
